Fix layout shift

--- a/project-styles.css
+++ b/project-styles.css
@@ -62,6 +62,7 @@
 
 img {
   width: 500px;
+  height: auto;
   /* margin: 0 auto; */
   border-radius: var(--borderRadius);
 }
